FIX overflow words in folder labels

--- a/src/components/Folder/Folder.scss
+++ b/src/components/Folder/Folder.scss
@@ -29,6 +29,9 @@
   .label {
     padding-left: 15px;
     font-size: 18px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 
   .folder_delete {
